// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test App test snapshot 1`] = `
<input
  data-testid="input"
  placeholder="Введите ваш email"
  type="text"
  value="test@mail.ru"
/>
`;

exports[`Test App test userEvent 1`] = `
<input
  data-testid="input"
  placeholder="Введите ваш email"
  type="text"
  value="test@mail.ru"
/>
`;

exports[`Test App test userEvent 2`] = `
<input
  data-testid="input"
  placeholder="Введите ваш email"
  type="text"
  value="138"
/>
`;
